package DIP_respecte;

public interface Database {
    int write(String inputString);
}
